<resources>
    <string name="app_name">Dice Roller</string>

    <string name="dice_number_1">Dice Number 1</string>
    <string name="settings">Settings</string>
    <string name="dice_count">Dice Count</string>
    <string name="version">Version</string>
    <string name="one_dice">1 Dice</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="Dice_Count">Dice Count</string>
    <string name="Sound">Sound</string>
    <string name="Rate_this_app">Rate this app</string>
    <string name="Usage_Policy">Usage Policy</string>
    <string name="policy_content">Dice is for personal and non-commercial use only.</string>
    <string name="Dice_App">Dice App</string>
    <string name="Roll_The_Dice">Roll The Dice</string>
    <string name="splash_content">Take a chance!</string>
    <string name="Settings">Settings</string>
    <string name="Back_click">Back</string>
</resources>