<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_56"
            android:background="@color/red"
            android:contentInsetStart="@dimen/_0sdp"
            android:contentInsetLeft="@dimen/_0sdp"
            android:contentInsetEnd="@dimen/_0sdp"
            android:contentInsetRight="@dimen/_0sdp"
            android:elevation="@dimen/_2sdp"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="@dimen/_0sdp"
            app:contentInsetLeft="@dimen/_0sdp"
            app:contentInsetRight="@dimen/_0sdp"
            app:contentInsetStart="@dimen/_0sdp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:contentDescription="@string/Back_click"
                        android:src="@drawable/back_arrow"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/llBack"
                    android:layout_toRightOf="@+id/llBack"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llDices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/draw_ripple_borderd"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/Dice_Count"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/tvDiceCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/light_dark_gray"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cbSound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center_vertical"
                        android:layoutDirection="rtl"
                        android:text="@string/Sound"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        android:theme="@style/BrandedSwitch"
                        tools:targetApi="jelly_bean_mr1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tvRateApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/draw_ripple_borderd"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/Rate_this_app"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/draw_ripple_borderd"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/Usage_Policy"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/policy_content"
                        android:textColor="@color/light_dark_gray"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/draw_ripple_borderd"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/Dice_App"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/tvVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/light_dark_gray"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/light_gray"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
